Eth Entities Addition

--- a/Starter_Code/crypto_sentiment.ipynb
+++ b/Starter_Code/crypto_sentiment.ipynb
@@ -3542,12 +3542,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solana',\n",
+       " 'Anatoly Yakovenko',\n",
+       " 'Ethereum',\n",
+       " 'Altcoins',\n",
+       " 'Tuesday night',\n",
+       " 'Wednesday',\n",
+       " 'morning',\n",
+       " 'months',\n",
+       " 'hundreds of billions',\n",
+       " 'Ethereum',\n",
+       " 'February 19, 2021',\n",
+       " 'Alex Castro',\n",
+       " 'The Verge\\r\\n\\n \\n\\n Cryptocurrency',\n",
+       " 'Coinbase',\n",
+       " 'this morning',\n",
+       " 'Coinbase',\n",
+       " 'Bin',\n",
+       " 'Spanish',\n",
+       " 'AI',\n",
+       " 'Last May',\n",
+       " 'Buterin',\n",
+       " '27',\n",
+       " '99.95%',\n",
+       " 'Carl Beekhuizen',\n",
+       " 'the Ethereum Foundation',\n",
+       " 'Beekhuizen',\n",
+       " 'tomorrow',\n",
+       " 'Norton',\n",
+       " 'Norton',\n",
+       " 'Norton Crypto',\n",
+       " 'chars]\"We',\n",
+       " 'Bitcoin',\n",
+       " 'U.S. Dollar',\n",
+       " 'May 26, 2020',\n",
+       " 'Dado Ruvic/File PhotoBitcoin',\n",
+       " 'last week',\n",
+       " 'one-day',\n",
+       " 'March last year',\n",
+       " 'Wednesday',\n",
+       " '$1 trillion',\n",
+       " 'Entrepreneur',\n",
+       " 'March 2021',\n",
+       " 'more than one million',\n",
+       " 'SafeMoon',\n",
+       " 'decades',\n",
+       " 'Ill',\n",
+       " 'Jacks',\n",
+       " 'CriddleTechnology',\n",
+       " 'Kim Catdarshian',\n",
+       " 'Ethereum',\n",
+       " 'Spanish',\n",
+       " 'AI',\n",
+       " 'This week',\n",
+       " 'March 2020',\n",
+       " 'Ferdman/Getty Images',\n",
+       " 'Mark Cuban',\n",
+       " 'Ethereum',\n",
+       " 'Polygon',\n",
+       " 'Polygon',\n",
+       " 'tEhereum',\n",
+       " 'Last week',\n",
+       " 'Trump',\n",
+       " 'This week',\n",
+       " 'Elon Musk’s']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List all Entities\n",
-    "# YOUR CODE HERE!"
+    "entities = [ent.text for ent in doc.ents]\n",
+    "entities"
    ]
   },
   {
